--- a/.github/workflows/grafana-docker-compose-ci.yml
+++ b/.github/workflows/grafana-docker-compose-ci.yml
@@ -31,7 +31,9 @@ jobs:
       run: docker-compose up -d
 
     - name: Verify Grafana service
-      run: curl --retry 5 --retry-delay 5 --retry-connrefused http://localhost:3000
+      run: |
+        sleep 30
+        curl --retry 5 --retry-delay 5 --retry-connrefused http://localhost:3000
 
     - name: Stop and remove services
       run: docker-compose down -v
