--- a/.github/workflows/grafana-docker-compose-ci.yml
+++ b/.github/workflows/grafana-docker-compose-ci.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Verify Grafana service
       run: |
         sleep 30
-        curl --retry 5 --retry-delay 5 --retry-connrefused http://localhost:3000
+        curl --retry 5 --retry-delay 5 --retry-connrefused --insecure https://localhost | grep '.*"/login".*Found*'
 
     - name: Stop and remove services
       run: docker-compose down -v
