Update paths to ignore in CI for Grafana Container
This commit updates the paths to ignore in the CI for the Grafana Container. The paths for '.gitignore', '*.md', 'LICENSE', 'install_docker_debian.sh', 'install_docker_ubuntu.sh', and 'certs/*' are now ignored during push and pull requests. This prevents unnecessary CI runs when changes are made to these files.

--- a/.github/workflows/grafana-docker-compose-ci.yml
+++ b/.github/workflows/grafana-docker-compose-ci.yml
@@ -2,7 +2,23 @@ name: CI for Grafana Container
 
 on:
   push:
+    paths-ignore:
+      - '.gitignore'
+      - '*.md'           # Ignores all markdown files
+      - 'LICENSE'
+      - 'install_docker_debian.sh'
+      - 'install_docker_ubuntu.sh'
+      - 'certs/*'
+      # Add other paths or patterns to ignore here
   pull_request:
+    paths-ignore:
+      - '.gitignore'
+      - '*.md'           # Ignores all markdown files
+      - 'LICENSE'
+      - 'install_docker_debian.sh'
+      - 'install_docker_ubuntu.sh'
+      - 'certs/*'
+      # Add other paths or patterns to ignore here
 
 jobs:
   build-and-test-grafana-docker-compose:
