--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,23 @@ events { worker_connections 1024; }
 
 http {
     server {
+        listen 80;
+        server_name localhost;
+        # redirect http to https
+        return 301 https://$host$request_uri;
+    }
+    server {
         listen 443 ssl;
+        # SSL settings for Grafana
         server_name localhost;
 
+        # SSL settings for Grafana
         ssl_certificate /etc/nginx/certs/server.crt;
         ssl_certificate_key /etc/nginx/certs/server.key;
 
         location / {
             proxy_pass http://grafana:3000;
+            proxy_set_header Host $host;
         }
     }
 }
