--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@
 # Logs and databases #
 ######################
 *.log
-*.sql
-*.sqlite
 
 # OS generated files #
 ######################
@@ -67,6 +65,7 @@ db.sqlite3
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
 
 # Certificates #
 ################
@@ -81,6 +80,12 @@ useful-scripts/*
 # Docker #
 ##########
 docker-compose.override.yml
+
+# Temporary files #
+###################
+*.tmp
+*.bak
+~*
 
 # Add additional rules here #
 #############################
