--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,11 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
 
+        # Add rate limiting to prevent abuse
+        limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+
         location / {
+            limit_req zone=one burst=20;
             proxy_pass http://grafana:3000;
             proxy_set_header Host $host;
         }
