--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   grafana:
     image: grafana/grafana:11.6.0-ubuntu
@@ -15,7 +14,9 @@ services:
       retries: 3
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.21.6
+    depends_on:
+      - grafana
     ports:
       - "80:80"
       - "443:443"
