--- a/.github/workflows/grafana-docker-compose-ci.yml
+++ b/.github/workflows/grafana-docker-compose-ci.yml
@@ -34,19 +34,19 @@ jobs:
           openssl x509 -req -days 365 -in certs/server.csr -signkey certs/server.key -out certs/server.crt
 
       - name: Start services
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Check if containers are running
         run: docker ps -a
 
       - name: Check docker-compose logs
-        run: docker-compose logs
+        run: docker compose logs
 
       - name: Wait longer for services to fully start
         run: sleep 60
 
       - name: Verify Nginx configuration
-        run: docker-compose exec -T nginx nginx -t
+        run: docker compose exec -T nginx nginx -t
 
       - name: Test connection to Nginx
         run: |
@@ -59,4 +59,4 @@ jobs:
           curl -v --retry 5 --retry-delay 5 --retry-connrefused http://localhost:3000 || true
 
       - name: Stop and remove services
-        run: docker-compose down -v
+        run: docker compose down -v
