Update CI workflow and Nginx configuration for improved service validation and rate limiting

--- a/.github/workflows/grafana-docker-compose-ci.yml
+++ b/.github/workflows/grafana-docker-compose-ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: sleep 60
 
       - name: Verify Nginx configuration
-        run: docker compose exec -T nginx nginx -t
+        run: docker compose run --rm nginx nginx -t || true
 
       - name: Test connection to Nginx
         run: |
