--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 events { worker_connections 1024; }
 
 http {
+    # Define rate limiting zone globally
+    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
     server {
         listen 80;
         server_name localhost;
@@ -25,9 +27,6 @@ http {
         # Use secure SSL protocols and ciphers
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
-
-        # Add rate limiting to prevent abuse
-        limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 
         location / {
             limit_req zone=one burst=20;
